[package]
name = "stylus-string-utils"
version = "0.1.0"
edition = "2021"
authors = ["dmystical-coder"]
description = "A Rust implementation of OpenZeppelin's Strings.sol library for Arbitrum Stylus"

[dependencies]
stylus-sdk = { version = "0.6.0", optional = true }
alloy-primitives = "0.8.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[features]
default = []
stylus = ["stylus-sdk"]
export-abi = ["stylus-sdk/export-abi", "stylus"]