[package]
name = "erc20-implementation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = { version = "0.8.20", default-features = false }
alloy-sol-types = "0.8.20"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
default = []

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"